# Histogram-Equalization-Image-Filtering---Computer-Vision

./: CMakeLists.txt  README.md
include/: filter.h
src/: Source.cpp  filter.cpp
